add update business function
